@@ -43,7 +43,6 @@
     # Format of the observed spectrum file.
     # Format : 'single' or 'MOSAIC'
     # Note : this parameters controls the use of the MOSAIC mode of ForMoSA by setting it to 'MOSAIC' (more on the MOSAIC option in NEWS_README.txt)
-    # Contrast covariance, Resolution, Instrument'
     observation_format = 'NA'
 
 
