@@ -42,7 +42,6 @@
     # Format of the observed spectrum file.
     # Format : 'single' or 'MOSAIC'
     # Note : this parameters controls the use of the MOSAIC mode of ForMoSA by setting it to 'MOSAIC'
-    # Contrast covariance, Resolution, Instrument'
     observation_format = 'MOSAIC'
 
 
